# esp32-p4-example-rs

./: Cargo.toml  README.md  build.rs  diagram.json  wokwi.toml
.cargo/: config.toml
ld/: memory.x
src/: main.rs
